--- a/app/src/main/res/layout/bottompanel_newround.xml
+++ b/app/src/main/res/layout/bottompanel_newround.xml
@@ -6,14 +6,14 @@
     android:padding="10dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1.2"
         android:background="#DDDDDD"
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginRight="5dp"
             android:layout_weight="1"
@@ -27,7 +27,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Helare"
-                android:textAlignment="textEnd"
+                android:textAlignment="center"
                 android:textSize="20sp" />
 
             <TextView
@@ -37,7 +37,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Magiker"
-                android:textAlignment="textEnd"
+                android:textAlignment="center"
                 android:textSize="20sp" />
 
             <TextView
@@ -47,7 +47,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Odågor"
-                android:textAlignment="textEnd"
+                android:textAlignment="center"
                 android:textSize="20sp" />
 
             <TextView
@@ -57,7 +57,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Riddare"
-                android:textAlignment="textEnd"
+                android:textAlignment="center"
                 android:textSize="20sp" />
 
             <TextView
@@ -67,7 +67,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Krigare"
-                android:textAlignment="textEnd"
+                android:textAlignment="center"
                 android:textSize="20sp" />
 
             <TextView
@@ -77,7 +77,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Special A"
-                android:textAlignment="textEnd"
+                android:textAlignment="center"
                 android:textSize="20sp" />
 
             <TextView
@@ -87,84 +87,84 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="Special B"
-                android:textAlignment="textEnd"
+                android:textAlignment="center"
                 android:textSize="20sp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/healerAmountValue"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:text="3"
                 android:textAlignment="center" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName2"
+                android:id="@+id/mageAmountValue"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:text="3"
                 android:textAlignment="center" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName3"
+                android:id="@+id/rogueAmountValue"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:text="3"
                 android:textAlignment="center" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName4"
+                android:id="@+id/knightAmountValue"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:text="3"
                 android:textAlignment="center" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName5"
+                android:id="@+id/warriorAmountValue"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:text="3"
                 android:textAlignment="center" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName6"
+                android:id="@+id/specialAAmountValue"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:text="1"
                 android:textAlignment="center" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName7"
+                android:id="@+id/specialBAmountValue"
                 android:layout_width="wrap_content"
                 android:layout_height="48dp"
                 android:ems="10"
-                android:inputType="textPersonName"
+                android:inputType="number"
                 android:text="0"
                 android:textAlignment="center" />
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
@@ -280,12 +280,13 @@
 
     <Button
         android:id="@+id/rollRoundButton"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:backgroundTint="#FFFFFF"
         android:text="Roll Round"
         android:textColor="#000000"
+        android:textSize="25sp"
         app:strokeColor="#000000"
         app:strokeWidth="2dp" />
 
